--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "autoload": {
         "psr-0": {
             "Blog\\": "class/"
-        }
+        },
+        "classmap": ["pages/"]
     }
 }
